# tiago_robot

./: README.md
controller_configuration_tiago_1/: CHANGELOG.rst  CMakeLists.txt  package.xml
controller_configuration_tiago_1/config/: mobile_base_controller_multipliers.yaml
tiago_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_bringup/config/: approach_planner.yaml  approach_planner_iron.yaml  approach_planner_schunk.yaml  dynamic_footprint_arm_no-ee.yaml  dynamic_footprint_arm_no-ee_omni.yaml  dynamic_footprint_arm_pal-gripper_omni.yaml  dynamic_footprint_arm_pal-hey5.yaml  dynamic_footprint_arm_pal-hey5_omni.yaml  dynamic_footprint_arm_robotiq-2f-85_omni.yaml  dynamic_footprint_arm_robotiq-85.yaml  dynamic_footprint_arm_robotiq-epick.yaml  dynamic_footprint_arm_robotiq-epick_omni.yaml  dynamic_footprint_arm_schunk-wsg.yaml  dynamic_footprint_iron.yaml  dynamic_footprint_shadow.yaml  dynamic_footprint_titanium_chessboard.yaml  dynamixel_head.yaml  joy_teleop.yaml  speed_limit.yaml  tiago.rviz  tiago_eye_hand_calibration.yaml  tiago_hardware.yaml  tiago_motions.yaml  tiago_motions_iron.yaml  tiago_motions_schunk.yaml  tiago_motions_steel.yaml  tiago_motions_titanium.yaml  tiago_soften_values.yaml
tiago_bringup/config/approach_planner/: approach_planner.yaml.em  approach_planner_no-arm.yaml  approach_planner_no-ee_schunk-ft.yaml  approach_planner_no-end-effector.yaml  approach_planner_pal-gripper.yaml  approach_planner_pal-gripper_schunk-ft.yaml  approach_planner_pal-hey5.yaml  approach_planner_pal-hey5_schunk-ft.yaml  approach_planner_right-arm_schunk-wsg_no-ft-sensor.yaml  approach_planner_robotiq-2f-140.yaml  approach_planner_robotiq-2f-85_schunk-ft.yaml  approach_planner_robotiq-epick_schunk-ft.yaml
tiago_bringup/config/joy_teleop/: joy_config.yaml  joy_teleop.yaml.em  joy_teleop_custom.yaml  joy_teleop_custom_schunk-ft.yaml  joy_teleop_move.yaml  joy_teleop_move_omni.yaml  joy_teleop_no-arm.yaml  joy_teleop_no-ee.yaml  joy_teleop_no-ee_schunk-ft.yaml  joy_teleop_pal-gripper.yaml  joy_teleop_pal-gripper_schunk-ft.yaml  joy_teleop_pal-hey5.yaml  joy_teleop_pal-hey5_schunk-ft.yaml  (+5 more)
tiago_bringup/launch/: dynamic_footprint.launch  dynamixel_node.launch  end_effector_camera.launch  head_xtion.launch  joystick_teleop.launch  joystick_teleop.launch.py  look_to_link.launch  marker_detector.launch  mm11.launch  play_motion.launch  play_motion.launch.py  soften_on_effort.launch  tiago.launch  tiago.launch.py  tiago_bringup.launch  tiago_bringup.launch.py  tiago_camera.launch  tiago_play_motion2.launch.py  twist_mux.launch  twist_mux.launch.py
tiago_bringup/module/: bringup.yaml  joystick.yaml  play_motion2.yaml  twist_mux.yaml
tiago_bringup/scripts/: end_effector_camera.sh  load_available_motions.py  regen_em_file.py  regen_em_motion_file.py
tiago_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_controller_configuration/config/: arm_controller.yaml  cartesian_impedance.yaml  current_limit_controllers.yaml  default_safety_parameters.yaml  forward_velocity_controllers.yaml  ft_sensor_controller.yaml  gazebo_controller_manager_cfg.yaml  gravity_compensation_controller.yaml  gravity_compensation_with_controller_wrist_controller.yaml  head_controller.yaml  joint_impedance_trajectory_controllers.yaml  joint_state_broadcaster.yaml  joint_state_controller.yaml  joint_state_controller_extra_joints_omni.yaml  joint_trajectory_controllers.yaml  joint_trajectory_controllers_velocity.yaml  mobile_base_controller.yaml  mobile_base_controller_multipliers_omni.yaml  mobile_base_controller_omni.yaml  motor_param_ilm.yaml  motor_param_parker.yaml  pal-hey5_joint_trajectory_controllers.yaml  pids.yaml  robotiq-epick_joint_effort_controller.yaml  torso_controller.yaml
tiago_controller_configuration/launch/: arm_controller.launch.py  arm_impedance_controller.launch.py  cartesian_impedance_controller.launch  cartesian_impedance_controller.launch.orig  current_limit_controllers.launch  default_controllers.launch  default_controllers.launch.py  forward_velocity_controllers.launch  ft_sensor_controller.launch.py  gravity_compensation.launch  gravity_compensation_controller.launch.py  gravity_compensation_with_controller_wrist.launch  gripper_controller.launch  gripper_controller.launch.py  head_controller.launch.py  hey5_controller.launch  impedance_controller.launch  iron_controllers.launch  joint_state_broadcaster.launch.py  joint_state_controller.launch.py  joint_trajectory_controllers_velocity.launch  mobile_base_controller.launch.py  pal-gripper_controller.launch.py  pal-hey5_controller.launch.py  shadow_controllers.launch  steel_controllers.launch  tiago_controllers.launch  titanium_chessboard_controllers.launch  titanium_controllers.launch  torso_controller.launch.py  wbc_controllers.launch  whole_body_controller.launch
tiago_controller_configuration/module/: 10_default_controllers.yaml  20_default_controllers.yaml
tiago_description/: CHANGELOG.rst  CMakeLists.txt  model.urdf  package.xml
tiago_description/gazebo/: gazebo.urdf.xacro  gazebo_omni.urdf.xacro
tiago_description/launch/: robot_state_publisher.launch.py  show.launch.py  tiago_kinematic_test.launch
tiago_description/meshes/: head.dae  head_1.stl  head_2.stl
tiago_description/module/: 10_robot_state_publisher.yaml  robot_state_publisher.yaml
tiago_description/robots/: show.launch  tiago.urdf.xacro  tiago_chessboard.urdf.xacro  tiago_full.urdf.xacro  tiago_iron.urdf.xacro  tiago_schunk.urdf.xacro  tiago_shadow.urdf.xacro  tiago_steel.urdf.xacro  tiago_steel_chessboard.urdf.xacro  tiago_titanium.urdf.xacro  tiago_titanium_chessboard.urdf.xacro  upload.launch  upload_tiago.launch
tiago_description/ros2_control/: ros2_control.urdf.xacro  transmissions.urdf.xacro
tiago_description/test/: test_description.launch.py  test_tiago.test  test_tiago_iron.test  test_tiago_steel.test  test_tiago_titanium.test
tiago_description/tiago_description/: tiago_launch_utils.py
tiago_description/urdf/: materials.urdf.xacro
tiago_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+217 files in other folders)
