<?xml version="1.0"?>
<package>
  <name>controller_configuration_tiago_1</name>
  <version>0.0.4</version>
  <description>
    TIAGo-1 specific controller configuration.
  </description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <license>Modified BSD</license>

  <replace>tiago_controller_configuration</replace>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tiago_controller_configuration</run_depend>
</package>
