<?xml version="1.0"?>
<package format="3">
  <name>tiago_controller_configuration</name>
  <version>2.3.7</version>
  <description>Configuration and launch files of TIAGo's controllers</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>play_motion</exec_depend>
  <exec_depend>current_limit_controller</exec_depend>
  <exec_depend>pal_parallel_gripper_wrapper</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>imu_sensor_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>force_torque_sensor_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">omni_drive_controller</exec_depend>
  <exec_depend>gravity_compensation_controller</exec_depend>
  <exec_depend>simple_grasping_action</exec_depend>
  <exec_depend>pal_gripper_controller_configuration</exec_depend>
  <exec_depend>pal_wsg_gripper_controller_configuration</exec_depend>
  <exec_depend>pal_robotiq_controller_configuration</exec_depend>
  <exec_depend>current_limit_controller</exec_depend>
  <exec_depend>pal_local_joint_control</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">cartesian_impedance_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

</package>
