<?xml version="1.0"?>
<package format="3">
  <name>tiago_controller_configuration</name>
  <version>4.0.8</version>
  <description>Configuration and launch files of TIAGo's controllers</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- <exec_depend>play_motion</exec_depend> -->
  <!-- <exec_depend>current_limit_controller</exec_depend> -->
  <!-- <exec_depend>pal_parallel_gripper_wrapper</exec_depend> -->
  <!-- <exec_depend>imu_sensor_controller</exec_depend> -->
  <!-- <exec_depend>force_torque_sensor_controller</exec_depend> -->
  <!-- <exec_depend>gravity_compensation_controller</exec_depend> -->
  <!-- <exec_depend>simple_grasping_action</exec_depend> -->
  <!-- <exec_depend>pal_wsg_gripper_controller_configuration</exec_depend> -->
  <!-- <exec_depend>pal_local_joint_control</exec_depend> -->

  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">ros2_gravity_compensation_controller</exec_depend>
  <exec_depend>pal_gripper_controller_configuration</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
