<?xml version="1.0"?>
<package format="3">
  <name>tiago_description</name>
  <version>2.0.55</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the TIAGO robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend>hey5_description</exec_depend>
  <exec_depend>pal_gripper_description</exec_depend>
  <exec_depend>pal_wsg_gripper_description</exec_depend>
  <exec_depend>tiago_description_calibration</exec_depend>
  <exec_depend>custom_ee_description</exec_depend>
  <exec_depend>tiago_controller_configuration</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>urdf_test</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
