<?xml version="1.0"?>
<package format="3">

  <name>tiago_description</name>
  <version>2.3.7</version>
  <description>This package contains the description (mechanical, kinematic, visual,
      etc.) of the TIAGO robot.  The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pmb2_description</exec_depend>
  <exec_depend condition="$PAL_DISTRO > 0">omni_base_description</exec_depend>
  <exec_depend>hey5_description</exec_depend>
  <exec_depend>pal_gripper_description</exec_depend>
  <exec_depend>pal_wsg_gripper_description</exec_depend>
  <exec_depend>tiago_description_calibration</exec_depend>
  <exec_depend>custom_ee_description</exec_depend>
  <exec_depend>pal_robotiq_85_description</exec_depend>
  <exec_depend>pal_robotiq_140_description</exec_depend>
  <exec_depend>pal_robotiq_epick_description</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>urdf_test</test_depend>

</package>
