<?xml version="1.0"?>
<package format="3">
  <name>tiago_robot</name>
  <version>2.0.55</version>
  <description>Description and controller configuration of TIAGo</description>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_description</exec_depend>
  <exec_depend>tiago_controller_configuration</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
