<?xml version="1.0"?>
<package format="3">
  <name>tiago_robot</name>
  <version>4.0.12</version>
  <description>Description and controller configuration of TIAGo</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <maintainer email="noel.jimenez@pal-robotics.com">Noel Jimenez</maintainer>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tiago_description</exec_depend>
  <exec_depend>tiago_controller_configuration</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
